deploy/manifests/with-webhook-funnel/argotails.ingress.yaml
# trunk-ignore-all(checkov/CKV_K8S_21): The namespace is managed by Kustomize and the kustomization.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argotails
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: argotails
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - argotails
